Added newtons cannon and star shower

--- a/playground/Circular-Motion/index.html
+++ b/playground/Circular-Motion/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Canvas - Cicular Motion</title>
     <style>
+        body {
+            margin: 0;
+        }
         canvas {
             display: block;
         }
